Fix calendar dark mode

--- a/src/atcb.css
+++ b/src/atcb.css
@@ -49,7 +49,6 @@
 }
 
 .atcb_button.active {
-  background: rgb(255, 255, 255);
   border-radius: 6px 6px 3px 3px;
   z-index: 90;
 }
@@ -83,7 +82,6 @@
 }
 
 .atcb_list_item {
-  background: rgb(250, 250, 250);
   border: 1px solid rgb(210, 210, 210);
   border-top: 0;
   font-style: normal;
